--- a/sass/layout/_typography.scss
+++ b/sass/layout/_typography.scss
@@ -92,8 +92,8 @@ h6 {
   color: $color-headings;
   font-family: $font-headings;
   font-weight: var(--font-weight-headings);
-  margin-bottom: 2.7rem;
-  margin-top: 2.7rem;
+  margin-bottom: var(--margin-between-paragraphs);
+  margin-top: var(--margin-between-paragraphs);
 }
 
 h2,
