--- a/sass/variables/_spacings.scss
+++ b/sass/variables/_spacings.scss
@@ -9,6 +9,7 @@
   // Margins
   --margin-between-text-elements: 4rem;
   --margin-wp-block-image: 4rem;
+  --margin-between-paragraphs: 2.7rem;
 
   // Mid-sized screens
   @media (max-width: $width-grid-base + 150px) {
